# Airmont-Project-2024

./: LICENSE  README.md  grungeSongs.json  pyproject.toml  sample.xlsx
excelStats/: countrySongStats.xlsx  grunge_song_stats.xlsx  ~$grunge_song_stats.xlsx
playlistStats/: countrySongs.json  grungeSongs.json  metalSongs.json  popSongs.json  rapSongs.json
tests/: .env  README.md  createDatabase.py  hello.py  jsonPanda.py  librosa_demo.py  main.py  mongoDatabase.py  musicTimes.xlsx  neural_demo.py  pandaTest.py  requirements.txt  sample.xlsx  search_demo.py  spotipyTest.py
webApp/: index.html  style.css
webApp/mysite/mysite/: settings.py  urls.py
webApp/mysite/ocarina/: apps.py  spotify_recommender.py  urls.py  views.py
